Parser/test_cases/bad/recovervar.cl
class Foo {
    bad1 <- 0;
    good1 : Int <- 1;
    good2 : Int <- 2;
    bad2 <- 3;
};
